import com.manticore.benchmark.JmhReportTask

plugins {
    id 'java-library'
    id "me.champeau.jmh" version "latest.release"
}

group = 'com.manticore.tools'

repositories {
    mavenCentral()
}

dependencies {
    jmh project(":fpng-java")
    jmh project(":fpnge-java")
    jmh project(":fpng-java23")
    jmh 'com.pngencoder:pngencoder:+'
    jmh files('lib/pngencoder-1.jar')

    jmh 'commons-io:commons-io:+'
    jmh 'net.java.dev.jna:jna:+'
    jmh 'net.java.dev.jna:jna-platform:+'
    jmh 'org.openjdk.jmh:jmh-core:+'
    jmh 'org.openjdk.jmh:jmh-generator-annprocess:+'
}

tasks.register('jmhReport', JmhReportTask) {
    description = 'Generates an HTML report from JMH benchmark results.'
    group = 'benchmark'

    // Point at the JMH output JSON
    resultsFile = layout.projectDirectory.file('build/results/jmh/results.json')
    reportFile  = layout.projectDirectory.file('build/reports/jmh/benchmark-report.html')

    mustRunAfter tasks.named('jmh')

    doLast {
        copy {
            from(layout.buildDirectory.file("reports/jmh/benchmark-report.html").get().asFile)
            into rootProject.layout.projectDirectory.dir("src/site/sphinx/_static").asFile
        }
    }
}

tasks.named("jmh") {
    finalizedBy(tasks.named('jmhReport'))
}

jmh {
    timeUnit = 'ms' // Output time unit. Available time units are: [m, s, ms, us, ns].
    verbosity = 'NORMAL' // Verbosity mode. Available modes are: [SILENT, NORMAL, EXTRA]
    warmup = '3s' // Time to spend at each warmup iteration.
    warmupIterations = 2
    iterations = 3
    fork = 1
    benchmarkMode = ['avgt']
    //jvmArgs = ['-XX:+UseSerialGC','-Xms512M','-Xmx2G','-XX:+UseStringDeduplication', '-XX:-UseJVMCICompiler', '-XX:-EnableJVMCI']
    jvmArgs = ['-XX:+UseSerialGC', '-Xms512M', '-Xmx2G', '-XX:+UseStringDeduplication', '--enable-native-access=ALL-UNNAMED']
    //profilers = ['perf']

    //includes = ['FPNGEBenchmark']
    excludes = ['ByteBufferBenchmark']

    resultFormat = 'JSON'
}

jmhRunBytecodeGenerator.dependsOn(':fpng-java:build', ':fpnge-java:build', ':fpng-java23:build')

java {
    withSourcesJar()
    withJavadocJar()

    // needed for XML-Doclet to work (since Doclet changed again with Java 13)
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(23))
    }
}

spotless {
        java {
            leadingTabsToSpaces(4)
            eclipse().configFile(  rootProject.file('config/formatter/eclipse-java-google-style.xml') )
        }
}

spotbugsMain {
    reports {
        html {
            enabled = true
            destination = rootProject.file("build/reports/spotbugs/main/spotbugs.html")
            stylesheet = 'fancy-hist.xsl'
        }
    }
}

checkstyle {
    sourceSets = [sourceSets.main, sourceSets.test]
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
}

tasks.withType(Checkstyle).configureEach {
    reports {
        xml.required = false
        html.required = true
    }
}

